--- a/index.html
+++ b/index.html
@@ -15,6 +15,48 @@
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
+    <!--Viewpoint 320,480,720,960-->
+    <picture>
+      <source srcset="image/museum-480_x270.jpg 1x,
+      images/museum-720_x_405.jpg 2x,
+      images/museum-960_x_540.jpg"
+      media="(max-width:320px) 320px,
+      (max-width:640px) 640px
+      (max-width:960px)960px"
+      s/>
+      <source srcset="images/museum-480_x270.jpg
+      images/museum-960_x_540.jpg 2x,
+      images/museum-1440_x_810.jpg 3x"
+      media="(max-width:479px)" />
+
+      <source srcset="images/museum-720_x_405.jpg 1x,
+      images/museum-1440_x_810.jpg 2x,
+      images/museum-2160_x_1215.jpg 3x"
+      media="(max-width:719px)" />
+
+      <source srcset="images/museum-960_x_540.jpg,
+      images/museum-1920_x_1080.jpg 2x,
+      images/museum-2880_x_1621.jpg 3x"
+      media="(max-width:959px)" />
+
+      <!--Viewpoint 960,1280,1600-->
+      <source srcset="images/museum-480_x_480.jpg,
+      images/museum-960_x_960.jpg 2x,
+      images/museum-1440_x_1440.jpg 3x"
+      media="(min-width:479px)" />
+
+      <source srcset="images/museum-640_x_640.jpg,
+      images/museum-1280_x_1280.jpg 2x,
+      images/museum-1920_x_1920.jpg 3x"
+      media="(min-width:639px)" />
+
+      <source srcset="image/museum-800_x_800.jpg 1x,
+      images/museum-1600_x_1600.jpg 2x,
+      images/museum-2400_x_2400.jpg 3x"
+      media="(min-width:799px)" />
+
+    </picture>
+
     <img src="images/museum.jpg" alt="placeholder">
 
   </header>
